--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,53 @@
 .settings-dropdown {
   margin-left: auto;
 }
+
+
+/* NOTIFICATION */
+
+.notification-title-success {
+  color: rgb(30, 109, 30);
+  background-color: rgb(130, 225, 130);
+}
+.notification-text-success {
+  color: rgb(48, 122, 48);
+  background-color: rgb(175, 242, 175);
+}
+.notification-title-update {
+  color: rgb(30, 44, 109);
+  background-color: rgb(126, 132, 245);
+}
+.notification-text-update {
+  color: rgb(47, 68, 161);
+  background-color: rgb(176, 180, 244);
+}
+.notification-title-delete {
+  color: rgb(219, 56, 56);
+  background-color: rgb(240, 160, 160);
+}
+.notification-text-delete {
+  color: rgb(219, 56, 56);
+  background-color: rgb(249, 205, 205);
+}
+.notification-title-info {
+  color: rgb(143, 137, 44);
+  background-color: rgb(255, 250, 187);
+}
+.notification-text-info {
+  color: rgb(143, 137, 44);
+  background-color: rgb(255, 251, 210);
+}
+.notification-title-download {
+  color: rgb(88, 88, 88);
+  background-color: rgb(220, 220, 220);
+}
+.notification-text-download {
+  color: rgb(88, 88, 88);
+  background-color: rgb(243, 243, 243);
+}
+
+
+.notification-icon {
+  font-size: 25px;
+  margin-right: 10px;
+}
