--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body, #root {
 :root {
   --color-primary: #003765;
   --color-white: #fff;
-  --color-gray: rgb(90, 90, 90);
+  --color-gray: #3e3e3e;
 }
 
 
@@ -44,7 +44,7 @@ body, #root {
   filter: invert(100%);
 }
 .offcanvas-title .main-logo {
-  width: 200px;
+  width: 150px;
   height: 50px;
 }
 
@@ -54,15 +54,19 @@ body, #root {
 }
 
 /* NAV LINK */
+.offcanvas.offcanvas-start {
+  width: 300px;
+}
 .offcanvas.show:not(.hiding), .offcanvas.showing {
   background: #003765;
 }
+
 .offcanvas-header .btn-close {
   filter: invert(100%);
 }
 .nav-link {
-  padding-left: 15px;
   color: #c0c0c0;
+  padding: .5rem 2rem; 
 }
 .nav-link.active {
   color: #000;
@@ -72,6 +76,22 @@ body, #root {
   color: #000;
   background: #bababa;
 }
+.nav-pills .nav-link,
+.nav-tabs .nav-link {
+  color: #003765;
+}
+.nav-pills .nav-link.active,
+.nav-tabs .nav-link.active {
+  color: #fff;
+  background: #003765;
+}
+
+.nav-pills .nav-link:hover,
+.nav-tabs .nav-link:hover {
+  background: #236396;
+  color: #fff;
+}
+
 
 /* COMPONENTS */
 .login-container {
