--- a/src/index.css
+++ b/src/index.css
@@ -176,13 +176,21 @@ body, #root {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+  width: 100%;
+
 }
 .card-item {
-  flex-basis: 200px;
+  display: flex;
+  flex-direction: column;
+  flex-basis: 210px;
   border: 1px solid #dfdfdf;
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
--webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
--moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
+  text-decoration: none;
+  overflow: hidden;
+  max-width: 210px;
+  height: 100%;
 }
 .card-head {
   width: 101%;
@@ -190,6 +198,10 @@ body, #root {
   background: var(--color-primary);
   display: flex;
 }
+.card-item-row-2 {
+  width: 70px;
+}
+
 .row-item {
   display: flex;
   width: 100%;
@@ -197,13 +209,12 @@ body, #root {
 }
 .card-body {
   max-width: 100%;
-  max-height: 100%;
   background: var(--color-white);
   padding: .5rem 0;
+  color: initial;
+  height: 100%;
 }
-.card-body > div {
-  height: 30px;
-}
+
 .circle {
   width: 14px;
   height: 14px;
