--- a/src/index.css
+++ b/src/index.css
@@ -182,14 +182,14 @@ body, #root {
 .card-item {
   display: flex;
   flex-direction: column;
-  flex-basis: 230px;
+  flex-basis: 200px;
   border: 1px solid #dfdfdf;
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
   -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
   -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
   text-decoration: none;
   overflow: hidden;
-  max-width: 230px;
+  max-width: 200px;
   height: 100%;
 }
 .card-head {
@@ -198,8 +198,22 @@ body, #root {
   background: var(--color-primary);
   display: flex;
 }
+.card-head-title {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1rem;
+}
+.card-head-title-ai {
+  gap: .70rem;
+}
 .card-item-row-2 {
-  width: 70px;
+  width: 110px;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  text-align: center;
 }
 
 .row-item {
