--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body, #root {
 }
 
 :root {
-  --color-primary: #003765;
+  --color-primary: #1e9aff;
   --color-white: #fff;
   --color-gray: #3e3e3e;
 }
@@ -82,7 +82,7 @@ button:not(.btn-close, .navbar-toggler) {
   width: 300px;
 }
 .offcanvas.show:not(.hiding), .offcanvas.showing {
-  background: #003765;
+  background: #1e9aff;
 }
 
 .offcanvas-header .btn-close {
@@ -91,7 +91,7 @@ button:not(.btn-close, .navbar-toggler) {
   /* background-color: #000 !important; */
 }
 .nav-link {
-  color: #c0c0c0;
+  color: #fff;
   padding: .5rem 2rem; 
 }
 .nav-link.active {
@@ -100,16 +100,16 @@ button:not(.btn-close, .navbar-toggler) {
 } 
 .nav-link:hover {
   color: #000;
-  background: #bababa;
+  background: #fff;
 }
 .nav-pills .nav-link,
 .nav-tabs .nav-link {
-  color: #003765;
+  color: #1e9aff;
 }
 .nav-pills .nav-link.active,
 .nav-tabs .nav-link.active {
   color: #fff;
-  background: #003765;
+  background: #1e9aff;
 }
 
 .nav-pills .nav-link:hover,
@@ -194,19 +194,18 @@ button:not(.btn-close, .navbar-toggler) {
   flex-wrap: wrap;
   gap: 10px;
   width: 100%;
-
 }
 .card-item {
   display: flex;
   flex-direction: column;
-  flex-basis: 200px;
+  flex-basis: 300px;
   border: 1px solid #dfdfdf;
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
   -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
   -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
   text-decoration: none;
   overflow: hidden;
-  max-width: 200px;
+  max-width: 300px;
   height: 100%;
 }
 .card-head {
@@ -219,11 +218,12 @@ button:not(.btn-close, .navbar-toggler) {
   display: flex;
   width: 100%;
   align-items: center;
-  justify-content: space-between;
-  padding: 0 1rem;
+  justify-content: center;
+  gap: 3rem;
+  /* padding: 0 2rem; */
 }
 .card-head-title-ai {
-  gap: .70rem;
+  gap: 1.7rem;
 }
 .card-item-row-2 {
   width: 110px;
@@ -246,17 +246,35 @@ button:not(.btn-close, .navbar-toggler) {
 }
 
 .circle {
-  width: 14px;
-  height: 14px;
+  width: 11px;
+  height: 11px;
+  border-radius: 50%;
+  /* border: 1px solid #fff; */
+  position: relative;
+}
+.circle::before {
+  content: '';
+  position: absolute;
+  width: 15px;
+  height: 15px;
   border-radius: 50%;
 }
-.circle.avail {
+.circle::after {
+ content: ''; 
+ position: absolute;
+ transform: translate(10%, 10%);
+ width: 12px;
+ height: 12px;
+ border: 2px solid #fff;
+ border-radius: 50%;
+}
+.circle.avail:before {
   background: green;
 }
-.circle.affected {
+.circle.affected:before {
   background: yellow;
 }
-.circle.unavail {
+.circle.unavail:before {
   background: red;
 }
 
@@ -287,6 +305,6 @@ td.bg-red {
   font-size: 12px;
 }
 .table-component-bg th {
-  background: #003765;
+  background: #1e9aff;
   color: #fff;
 }
