--- a/src/index.css
+++ b/src/index.css
@@ -213,8 +213,11 @@ button:not(.btn-close, .navbar-toggler) {
 .card-head {
   width: 101%;
   height: 35px;
-  background: var(--color-primary);
+  background: #cccccc;
   display: flex;
+}
+.card-head h5 {
+  color: #4e4e4e;
 }
 .card-head-title {
   display: flex;
