--- a/src/index.css
+++ b/src/index.css
@@ -210,6 +210,7 @@ button.btn-print-report {
 .card-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 10px;
   width: 100%;
 }
