--- a/src/index.css
+++ b/src/index.css
@@ -139,7 +139,10 @@ button.btn-print-report {
   font-weight: bold;
   color: #3d3d3d
 }
-
+.ant-menu-item:hover {
+  background-color: #fff !important;
+  color: #000 !important;
+}
 
 /* COMPONENTS */
 .login-container {
