--- a/src/index.css
+++ b/src/index.css
@@ -137,7 +137,6 @@ body, #root {
   border-radius: 0;
 }
 .ant-menu-title-content {
-  /* font-weight: 600; */
   font-size: 16px;
 }
 :where(.css-dev-only-do-not-override-2i2tap).ant-switch.ant-switch-checked,
@@ -148,7 +147,6 @@ body, #root {
 :where(.css-dev-only-do-not-override-2i2tap).ant-tabs .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn,
 :where(.css-dev-only-do-not-override-2i2tap).ant-tabs .ant-tabs-tab-btn:hover {
   color: #f69a22 !important;
-  /* : #fff !important; */
 }
 .nav-pills .nav-link:hover,
 .nav-tabs .nav-link:hover {
@@ -159,7 +157,6 @@ button.btn-print-report {
   box-shadow: none;
   background: none !important;
   color: rgb(230, 150, 0) !important;
-  /* font-weight: bold; */
   padding: 0 !important;
   margin: 0 !important;
 }
@@ -178,14 +175,12 @@ button.btn-print-report {
   color: red;
   margin: 10px 0;
 }
-/* [type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled), button:not(:disabled),
-:where(.css-dev-only-do-not-override-2i2tap).ant-form:not(.ant-form-inline) .ant-form-item,
-:where(.css-dev-only-do-not-override-2i2tap).ant-btn-primary:disabled, :where(.css-dev-only-do-not-override-2i2tap).ant-btn-primary.ant-btn-disabled {
-  width: 100%;
-} */
-
 
 /* COMPONENTS */
+.ant-input,
+:where(.css-dev-only-do-not-override-2i2tap).ant-input-search >.ant-input-group >.ant-input-group-addon:last-child .ant-input-search-button{
+  border-radius: 0;
+}
 .login-container {
   width: 100%;
   height: 100vh;
